--- a/static/index.html
+++ b/static/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Banco Solar</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.css" integrity="sha512-3pIirOrwegjM6erE5gPSwkUzO+3cTjpnV9lexlNZqvupR64iZBnOOTiiLPb9M36zpMScbmUNIcHUqKD47M719g==" crossorigin="anonymous" referrerpolicy="no-referrer"
+    />
 
     <style>
         body {
@@ -121,8 +123,10 @@
             </div>
         </div>
     </div>
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js" integrity="sha512-VEd+nq25CkR676O+pLBnDW09R7VQX9Mdiij052gVCp5yVH3jGtH70Ho/UUv4mJDsEdTvqRCFZg0NKGiojGnUCw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
     <script src="https://momentjs.com/downloads/moment.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
@@ -161,14 +165,14 @@
             const name = $("#nombreEdit").val();
             const balance = $("#balanceEdit").val();
             try {
-                const {
-                    data
-                } = await axios.put(
-                    `http://localhost:3000/usuario?id=${id}`, {
-                        name,
-                        balance,
-                    }
-                );
+                const
+                    data = await axios.put(
+                        `http://localhost:3000/usuario?id=${id}`, {
+                            name,
+                            balance,
+                        }
+                    );
+                console.log(data);
                 $("#exampleModal").modal("hide");
                 location.reload();
             } catch (e) {
@@ -190,6 +194,11 @@
                 });
                 $("form:first input:first").val("");
                 $("form:first input:nth-child(2)").val("");
+                const err = await response.json();
+                if (response.status == 400) {
+                    alert(err)
+                    return
+                }
                 location.reload();
             } catch (e) {
                 alert("Algo salió mal ..." + e);
@@ -214,7 +223,11 @@
                         monto,
                     }),
                 });
-                const data = await response.json();
+                const err = await response.json();
+                if (response.status == 400) {
+                    alert(err)
+                    return
+                }
                 location.reload();
             } catch (e) {
                 console.log(e);
@@ -248,6 +261,7 @@
                 $("#emisor").append(`<option value="${c.nombre}">${c.nombre}</option>`);
                 $("#receptor").append(`<option value="${c.nombre}">${c.nombre}</option>`);
             });
+            getTransferencias();
         };
 
         const eliminarUsuario = async(id) => {
@@ -266,7 +280,7 @@
             data.forEach((t) => {
                 $(".transferencias").append(`
        <tr>
-         <td> ${formatDate(t[4])} </td>
+         <td> ${formatDate(t[0])} </td>
          <td> ${t[1]} </td>
          <td> ${t[2]} </td>
          <td> ${t[3]} </td>
